...
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tag_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/tag_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        android:visibility="visible"
        android:backgroundTint="@color/black"/>

    <ImageView
        android:id="@+id/tag_image2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/tag_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tag_image"
...
