...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_tag_button"
        android:layout_width="318dp"
        android:layout_height="66dp"
        android:text="@string/add_tag"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
                android:text="Description"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.087"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_spinner" />

            <EditText
                android:id="@+id/desc_editText"
                android:layout_width="297dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
...
